--- a/SET0409.ipynb
+++ b/SET0409.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+rhlpCZ62n5VUhYqDtLSb",
+      "authorship_tag": "ABX9TyMrlyCBeRl4Yg8corffwJsU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,49 @@
         "P = float(input(\"digite valor em polegadas: \"))\n",
         "mm = P * 25.4\n",
         "print(mm)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FRONT MATH IMPOT PI\n",
+        "\n",
+        "180-PI\n",
+        "Vgraus-Vrad\n",
+        "Vrad=Vgraus * pi/180"
+      ],
+      "metadata": {
+        "id": "RAunM2RpPOm8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import pi\n",
+        "#VOU SOLICITAR SOMENTE O RAIO\n",
+        "print(\"programar para calcular volume da esfera!\")\n",
+        "RAIO = float(input(\"Digite raio: \"))\n",
+        "v = (4/3) * pi * (RAIO**3)\n",
+        "print(\"Voume da esfera = \" , v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MhcGuKgsSFZe",
+        "outputId": "57c66471-929b-4143-b32c-3db8839ca72d"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "programar para calcular volume da esfera!\n",
+            "Digite raio: 5\n",
+            "Voume da esfera =  523.5987755982989\n"
+          ]
+        }
       ]
     }
   ]
